--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9a4fafdb",
    "metadata": {},
    "outputs": [
@@ -10,16 +10,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processor: Intel64 Family 6 Model 183 Stepping 1, GenuineIntel\n",
-      "CPU Brand: Intel(R) Core(TM) i5-14600K\n",
-      "CPU cores (logical): 20\n",
-      "OS: Windows 11\n",
-      "Python version: 3.12.7\n",
+      "Processor: AMD64 Family 26 Model 68 Stepping 0, AuthenticAMD\n",
+      "CPU cores (logical): 16\n",
+      "OS: Windows 10\n",
+      "Python version: 3.9.23\n",
       "CUDA available: True\n",
       "cuDNN enabled: True\n",
-      "CUDA version: 12.6\n",
-      "cuDNN version: 90501\n",
-      "Device name: NVIDIA GeForce RTX 4070 SUPER\n"
+      "CUDA version: 12.9\n",
+      "cuDNN version: 91002\n",
+      "Device name: NVIDIA GeForce RTX 5070 Ti\n"
      ]
     }
    ],
@@ -27,11 +26,11 @@
     "import torch\n",
     "import platform\n",
     "import os\n",
-    "import cpuinfo\n",
+    "# import cpuinfo\n",
     "\n",
     "print(\"Processor:\", platform.processor())\n",
-    "info = cpuinfo.get_cpu_info()\n",
-    "print(\"CPU Brand:\", info['brand_raw'])  \n",
+    "# info = cpuinfo.get_cpu_info()\n",
+    "# print(\"CPU Brand:\", info['brand_raw'])  \n",
     "print(\"CPU cores (logical):\", os.cpu_count())\n",
     "\n",
     "print(\"OS:\", platform.system(), platform.release())\n",
@@ -42,33 +41,38 @@
     "print(\"cuDNN enabled:\", torch.backends.cudnn.enabled)\n",
     "print(\"CUDA version:\", torch.version.cuda)\n",
     "print(\"cuDNN version:\", torch.backends.cudnn.version())\n",
-    "print(\"Device name:\", torch.cuda.get_device_name(0))"
+    "print(\"Device name:\", torch.cuda.get_device_name(0))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "44e17743",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "showing info https://raw.githubusercontent.com/nltk/nltk_data/gh-pages/index.xml\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'nltk'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnltk\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# nltk.download()\u001b[39;00m\n\u001b[0;32m      3\u001b[0m nltk\u001b[38;5;241m.\u001b[39m__version__\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'nltk'"
      ]
     }
    ],
    "source": [
     "import nltk\n",
-    "nltk.download()\n",
+    "# nltk.download()\n",
     "nltk.__version__"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "pytorch_test",
    "language": "python",
    "name": "python3"
   },
@@ -82,7 +86,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
