--- a/test.ipynb
+++ b/test.ipynb
@@ -68,11 +68,19 @@
     "# nltk.download()\n",
     "nltk.__version__"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8bb09517",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch_test",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -86,7 +94,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.23"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
