feat: resave linear_regression

--- a/yunjae/linear-regression/tensorDataset-and-dataLoader.ipynb
+++ b/yunjae/linear-regression/tensorDataset-and-dataLoader.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 2,
    "id": "1c203e4e",
    "metadata": {},
    "outputs": [],
@@ -43,13 +43,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": null,
    "id": "4af6bb27",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([5, 3])\n"
+     ]
+    }
+   ],
    "source": [
     "# 데이터\n",
     "x_train = torch.FloatTensor([[73, 80, 75], [93, 88, 93], [89, 91, 90], [96, 98, 100], [73, 66, 70]])\n",
+    "# print(x_train.shape)\n",
     "y_train = torch.FloatTensor([[152], [185], [180], [196], [142]])\n"
    ]
   },
