--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9a4fafdb",
    "metadata": {},
    "outputs": [
@@ -34,33 +34,30 @@
     "print(\"CPU cores (logical):\", os.cpu_count())\n",
     "\n",
     "print(\"OS:\", platform.system(), platform.release())\n",
-    "\n",
     "print(\"Python version:\", platform.python_version())\n",
     "\n",
     "print(\"CUDA available:\", torch.cuda.is_available())\n",
     "print(\"cuDNN enabled:\", torch.backends.cudnn.enabled)\n",
     "print(\"CUDA version:\", torch.version.cuda)\n",
     "print(\"cuDNN version:\", torch.backends.cudnn.version())\n",
-    "print(\"Device name:\", torch.cuda.get_device_name(0))\n",
-    "\n"
+    "print(\"Device name:\", torch.cuda.get_device_name(0))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "44e17743",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'nltk'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnltk\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# nltk.download()\u001b[39;00m\n\u001b[0;32m      3\u001b[0m nltk\u001b[38;5;241m.\u001b[39m__version__\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'nltk'"
-     ]
+     "data": {
+      "text/plain": [
+       "'3.9.1'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -72,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bb09517",
+   "id": "e3b7b6e9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -80,7 +77,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "pytorch_test",
    "language": "python",
    "name": "python3"
   },
@@ -94,7 +91,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
