--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9a4fafdb",
    "metadata": {},
    "outputs": [
@@ -10,15 +10,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processor: AMD64 Family 26 Model 68 Stepping 0, AuthenticAMD\n",
-      "CPU cores (logical): 16\n",
-      "OS: Windows 10\n",
-      "Python version: 3.9.23\n",
+      "Processor: Intel64 Family 6 Model 183 Stepping 1, GenuineIntel\n",
+      "CPU cores (logical): 20\n",
+      "OS: Windows 11\n",
+      "Python version: 3.12.7\n",
       "CUDA available: True\n",
       "cuDNN enabled: True\n",
-      "CUDA version: 12.9\n",
-      "cuDNN version: 91002\n",
-      "Device name: NVIDIA GeForce RTX 5070 Ti\n"
+      "CUDA version: 12.6\n",
+      "cuDNN version: 90501\n",
+      "Device name: NVIDIA GeForce RTX 4070 SUPER\n"
      ]
     }
    ],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "44e17743",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
        "'3.9.1'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,19 +65,11 @@
     "# nltk.download()\n",
     "nltk.__version__"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e3b7b6e9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch_test",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -91,7 +83,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.23"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
