feat : softmax_regression add

--- a/yebin/minibatch_dataloader.ipynb
+++ b/yebin/minibatch_dataloader.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "b34a4c58",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "ad374d1c",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "id": "70e77791",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "id": "54c610f7",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "id": "faf872b9",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "id": "7da77831",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "id": "4ceb285c",
    "metadata": {},
    "outputs": [
@@ -87,69 +87,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch    0/20 Batch 1/3 Cost: 41782.562500\n",
-      "Epoch    0/20 Batch 2/3 Cost: 14756.134766\n",
-      "Epoch    0/20 Batch 3/3 Cost: 5601.714844\n",
-      "Epoch    1/20 Batch 1/3 Cost: 1175.495483\n",
-      "Epoch    1/20 Batch 2/3 Cost: 350.068787\n",
-      "Epoch    1/20 Batch 3/3 Cost: 160.496368\n",
-      "Epoch    2/20 Batch 1/3 Cost: 35.866413\n",
-      "Epoch    2/20 Batch 2/3 Cost: 8.818185\n",
-      "Epoch    2/20 Batch 3/3 Cost: 2.481721\n",
-      "Epoch    3/20 Batch 1/3 Cost: 2.766671\n",
-      "Epoch    3/20 Batch 2/3 Cost: 4.964405\n",
-      "Epoch    3/20 Batch 3/3 Cost: 0.000284\n",
-      "Epoch    4/20 Batch 1/3 Cost: 3.880301\n",
-      "Epoch    4/20 Batch 2/3 Cost: 3.348495\n",
-      "Epoch    4/20 Batch 3/3 Cost: 0.007192\n",
-      "Epoch    5/20 Batch 1/3 Cost: 0.453604\n",
-      "Epoch    5/20 Batch 2/3 Cost: 3.008998\n",
-      "Epoch    5/20 Batch 3/3 Cost: 7.277217\n",
-      "Epoch    6/20 Batch 1/3 Cost: 5.917466\n",
-      "Epoch    6/20 Batch 2/3 Cost: 2.531934\n",
-      "Epoch    6/20 Batch 3/3 Cost: 0.011069\n",
-      "Epoch    7/20 Batch 1/3 Cost: 3.823801\n",
-      "Epoch    7/20 Batch 2/3 Cost: 3.090116\n",
-      "Epoch    7/20 Batch 3/3 Cost: 0.003172\n",
-      "Epoch    8/20 Batch 1/3 Cost: 3.288786\n",
-      "Epoch    8/20 Batch 2/3 Cost: 0.190094\n",
-      "Epoch    8/20 Batch 3/3 Cost: 6.512247\n",
-      "Epoch    9/20 Batch 1/3 Cost: 2.286593\n",
-      "Epoch    9/20 Batch 2/3 Cost: 4.939672\n",
-      "Epoch    9/20 Batch 3/3 Cost: 0.001184\n",
-      "Epoch   10/20 Batch 1/3 Cost: 0.791995\n",
-      "Epoch   10/20 Batch 2/3 Cost: 5.073600\n",
-      "Epoch   10/20 Batch 3/3 Cost: 0.063388\n",
-      "Epoch   11/20 Batch 1/3 Cost: 3.454570\n",
-      "Epoch   11/20 Batch 2/3 Cost: 3.566680\n",
-      "Epoch   11/20 Batch 3/3 Cost: 0.016727\n",
-      "Epoch   12/20 Batch 1/3 Cost: 1.731073\n",
-      "Epoch   12/20 Batch 2/3 Cost: 5.311911\n",
-      "Epoch   12/20 Batch 3/3 Cost: 0.179036\n",
-      "Epoch   13/20 Batch 1/3 Cost: 2.240952\n",
-      "Epoch   13/20 Batch 2/3 Cost: 4.509009\n",
-      "Epoch   13/20 Batch 3/3 Cost: 0.086547\n",
-      "Epoch   14/20 Batch 1/3 Cost: 0.247253\n",
-      "Epoch   14/20 Batch 2/3 Cost: 3.106268\n",
-      "Epoch   14/20 Batch 3/3 Cost: 7.557549\n",
-      "Epoch   15/20 Batch 1/3 Cost: 1.907380\n",
-      "Epoch   15/20 Batch 2/3 Cost: 5.141857\n",
-      "Epoch   15/20 Batch 3/3 Cost: 0.100219\n",
-      "Epoch   16/20 Batch 1/3 Cost: 2.266480\n",
-      "Epoch   16/20 Batch 2/3 Cost: 0.459464\n",
-      "Epoch   16/20 Batch 3/3 Cost: 6.344040\n",
-      "Epoch   17/20 Batch 1/3 Cost: 4.737116\n",
-      "Epoch   17/20 Batch 2/3 Cost: 3.783457\n",
-      "Epoch   17/20 Batch 3/3 Cost: 0.039609\n",
-      "Epoch   18/20 Batch 1/3 Cost: 3.903410\n",
-      "Epoch   18/20 Batch 2/3 Cost: 0.980588\n",
-      "Epoch   18/20 Batch 3/3 Cost: 5.283418\n",
-      "Epoch   19/20 Batch 1/3 Cost: 5.607494\n",
-      "Epoch   19/20 Batch 2/3 Cost: 3.384869\n",
-      "Epoch   19/20 Batch 3/3 Cost: 0.063627\n",
-      "Epoch   20/20 Batch 1/3 Cost: 1.847697\n",
-      "Epoch   20/20 Batch 2/3 Cost: 4.910810\n",
-      "Epoch   20/20 Batch 3/3 Cost: 0.112967\n"
+      "Epoch    0/20 Batch 1/3 Cost: 42696.875000\n",
+      "Epoch    0/20 Batch 2/3 Cost: 11199.187500\n",
+      "Epoch    0/20 Batch 3/3 Cost: 4683.673828\n",
+      "Epoch    1/20 Batch 1/3 Cost: 1131.781982\n",
+      "Epoch    1/20 Batch 2/3 Cost: 381.827515\n",
+      "Epoch    1/20 Batch 3/3 Cost: 114.223633\n",
+      "Epoch    2/20 Batch 1/3 Cost: 25.070709\n",
+      "Epoch    2/20 Batch 2/3 Cost: 14.696585\n",
+      "Epoch    2/20 Batch 3/3 Cost: 15.737899\n",
+      "Epoch    3/20 Batch 1/3 Cost: 1.616705\n",
+      "Epoch    3/20 Batch 2/3 Cost: 4.922921\n",
+      "Epoch    3/20 Batch 3/3 Cost: 1.088962\n",
+      "Epoch    4/20 Batch 1/3 Cost: 3.370894\n",
+      "Epoch    4/20 Batch 2/3 Cost: 4.022220\n",
+      "Epoch    4/20 Batch 3/3 Cost: 0.638663\n",
+      "Epoch    5/20 Batch 1/3 Cost: 0.699388\n",
+      "Epoch    5/20 Batch 2/3 Cost: 2.961741\n",
+      "Epoch    5/20 Batch 3/3 Cost: 7.596107\n",
+      "Epoch    6/20 Batch 1/3 Cost: 4.445807\n",
+      "Epoch    6/20 Batch 2/3 Cost: 0.175936\n",
+      "Epoch    6/20 Batch 3/3 Cost: 7.031690\n",
+      "Epoch    7/20 Batch 1/3 Cost: 5.778664\n",
+      "Epoch    7/20 Batch 2/3 Cost: 0.778911\n",
+      "Epoch    7/20 Batch 3/3 Cost: 6.287593\n",
+      "Epoch    8/20 Batch 1/3 Cost: 2.807477\n",
+      "Epoch    8/20 Batch 2/3 Cost: 0.330961\n",
+      "Epoch    8/20 Batch 3/3 Cost: 8.857835\n",
+      "Epoch    9/20 Batch 1/3 Cost: 0.249555\n",
+      "Epoch    9/20 Batch 2/3 Cost: 5.741116\n",
+      "Epoch    9/20 Batch 3/3 Cost: 6.262977\n",
+      "Epoch   10/20 Batch 1/3 Cost: 2.185494\n",
+      "Epoch   10/20 Batch 2/3 Cost: 5.500029\n",
+      "Epoch   10/20 Batch 3/3 Cost: 0.084433\n",
+      "Epoch   11/20 Batch 1/3 Cost: 0.968730\n",
+      "Epoch   11/20 Batch 2/3 Cost: 2.388171\n",
+      "Epoch   11/20 Batch 3/3 Cost: 9.578844\n",
+      "Epoch   12/20 Batch 1/3 Cost: 0.598793\n",
+      "Epoch   12/20 Batch 2/3 Cost: 2.887058\n",
+      "Epoch   12/20 Batch 3/3 Cost: 7.613443\n",
+      "Epoch   13/20 Batch 1/3 Cost: 5.254401\n",
+      "Epoch   13/20 Batch 2/3 Cost: 4.753251\n",
+      "Epoch   13/20 Batch 3/3 Cost: 0.176783\n",
+      "Epoch   14/20 Batch 1/3 Cost: 0.571025\n",
+      "Epoch   14/20 Batch 2/3 Cost: 2.914840\n",
+      "Epoch   14/20 Batch 3/3 Cost: 8.246510\n",
+      "Epoch   15/20 Batch 1/3 Cost: 4.776210\n",
+      "Epoch   15/20 Batch 2/3 Cost: 4.915306\n",
+      "Epoch   15/20 Batch 3/3 Cost: 0.152886\n",
+      "Epoch   16/20 Batch 1/3 Cost: 0.216944\n",
+      "Epoch   16/20 Batch 2/3 Cost: 2.947362\n",
+      "Epoch   16/20 Batch 3/3 Cost: 7.651721\n",
+      "Epoch   17/20 Batch 1/3 Cost: 6.806368\n",
+      "Epoch   17/20 Batch 2/3 Cost: 2.953474\n",
+      "Epoch   17/20 Batch 3/3 Cost: 0.278429\n",
+      "Epoch   18/20 Batch 1/3 Cost: 2.302795\n",
+      "Epoch   18/20 Batch 2/3 Cost: 0.100543\n",
+      "Epoch   18/20 Batch 3/3 Cost: 8.280723\n",
+      "Epoch   19/20 Batch 1/3 Cost: 4.716660\n",
+      "Epoch   19/20 Batch 2/3 Cost: 4.913113\n",
+      "Epoch   19/20 Batch 3/3 Cost: 0.145822\n",
+      "Epoch   20/20 Batch 1/3 Cost: 3.050783\n",
+      "Epoch   20/20 Batch 2/3 Cost: 0.880642\n",
+      "Epoch   20/20 Batch 3/3 Cost: 6.865094\n"
      ]
     }
    ],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "id": "1fe6381f",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "151.3267059326172\n"
+      "152.72756958007812\n"
      ]
     }
    ],
@@ -201,25 +201,30 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "7e0367ac",
    "metadata": {},
+   "outputs": [],
    "source": [
     "class CustomDataset(torch.utils.data.Dataset):\n",
     "\n",
     "    # dataset preprocessing\n",
     "    def __init__(self):\n",
+    "        pass\n",
     "    \n",
     "    # dataset length\n",
     "    def __len__(self):\n",
+    "        pass\n",
     "\n",
     "    # get 1 sample from dataset\n",
-    "    def __getitem__(self, idx)"
+    "    def __getitem__(self, idx):\n",
+    "        pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 14,
    "id": "4c6cc42e",
    "metadata": {},
    "outputs": [],
@@ -232,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 15,
    "id": "3af780ae",
    "metadata": {},
    "outputs": [],
@@ -257,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "id": "9cad51b6",
    "metadata": {},
    "outputs": [],
@@ -271,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 17,
    "id": "02e13da0",
    "metadata": {},
    "outputs": [
@@ -279,69 +284,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch    0/20 Batch 1/3 Cost: 44719.175781\n",
-      "Epoch    0/20 Batch 2/3 Cost: 7510.323730\n",
-      "Epoch    0/20 Batch 3/3 Cost: 6109.453613\n",
-      "Epoch    1/20 Batch 1/3 Cost: 810.213989\n",
-      "Epoch    1/20 Batch 2/3 Cost: 290.380676\n",
-      "Epoch    1/20 Batch 3/3 Cost: 120.173264\n",
-      "Epoch    2/20 Batch 1/3 Cost: 20.509949\n",
-      "Epoch    2/20 Batch 2/3 Cost: 8.254769\n",
-      "Epoch    2/20 Batch 3/3 Cost: 2.262285\n",
-      "Epoch    3/20 Batch 1/3 Cost: 1.241246\n",
-      "Epoch    3/20 Batch 2/3 Cost: 0.137282\n",
-      "Epoch    3/20 Batch 3/3 Cost: 0.778577\n",
-      "Epoch    4/20 Batch 1/3 Cost: 0.345364\n",
-      "Epoch    4/20 Batch 2/3 Cost: 0.271899\n",
-      "Epoch    4/20 Batch 3/3 Cost: 0.538612\n",
-      "Epoch    5/20 Batch 1/3 Cost: 0.323095\n",
-      "Epoch    5/20 Batch 2/3 Cost: 0.348836\n",
-      "Epoch    5/20 Batch 3/3 Cost: 0.501902\n",
-      "Epoch    6/20 Batch 1/3 Cost: 0.580516\n",
-      "Epoch    6/20 Batch 2/3 Cost: 0.289355\n",
-      "Epoch    6/20 Batch 3/3 Cost: 0.290506\n",
-      "Epoch    7/20 Batch 1/3 Cost: 0.376247\n",
-      "Epoch    7/20 Batch 2/3 Cost: 0.213455\n",
-      "Epoch    7/20 Batch 3/3 Cost: 0.493634\n",
-      "Epoch    8/20 Batch 1/3 Cost: 0.093079\n",
-      "Epoch    8/20 Batch 2/3 Cost: 0.467854\n",
-      "Epoch    8/20 Batch 3/3 Cost: 0.507039\n",
-      "Epoch    9/20 Batch 1/3 Cost: 0.458262\n",
-      "Epoch    9/20 Batch 2/3 Cost: 0.317378\n",
-      "Epoch    9/20 Batch 3/3 Cost: 0.301531\n",
-      "Epoch   10/20 Batch 1/3 Cost: 0.357363\n",
-      "Epoch   10/20 Batch 2/3 Cost: 0.380249\n",
-      "Epoch   10/20 Batch 3/3 Cost: 0.469954\n",
-      "Epoch   11/20 Batch 1/3 Cost: 0.219106\n",
-      "Epoch   11/20 Batch 2/3 Cost: 0.338522\n",
-      "Epoch   11/20 Batch 3/3 Cost: 0.454661\n",
-      "Epoch   12/20 Batch 1/3 Cost: 0.281052\n",
-      "Epoch   12/20 Batch 2/3 Cost: 0.313791\n",
-      "Epoch   12/20 Batch 3/3 Cost: 0.351797\n",
-      "Epoch   13/20 Batch 1/3 Cost: 0.389932\n",
-      "Epoch   13/20 Batch 2/3 Cost: 0.284145\n",
-      "Epoch   13/20 Batch 3/3 Cost: 0.285022\n",
-      "Epoch   14/20 Batch 1/3 Cost: 0.410422\n",
-      "Epoch   14/20 Batch 2/3 Cost: 0.293192\n",
-      "Epoch   14/20 Batch 3/3 Cost: 0.271516\n",
-      "Epoch   15/20 Batch 1/3 Cost: 0.090512\n",
-      "Epoch   15/20 Batch 2/3 Cost: 0.905997\n",
-      "Epoch   15/20 Batch 3/3 Cost: 0.408467\n",
-      "Epoch   16/20 Batch 1/3 Cost: 0.406995\n",
-      "Epoch   16/20 Batch 2/3 Cost: 0.297306\n",
-      "Epoch   16/20 Batch 3/3 Cost: 0.141565\n",
-      "Epoch   17/20 Batch 1/3 Cost: 0.372243\n",
-      "Epoch   17/20 Batch 2/3 Cost: 0.320965\n",
-      "Epoch   17/20 Batch 3/3 Cost: 0.145752\n",
-      "Epoch   18/20 Batch 1/3 Cost: 0.326687\n",
-      "Epoch   18/20 Batch 2/3 Cost: 0.269033\n",
-      "Epoch   18/20 Batch 3/3 Cost: 0.687106\n",
-      "Epoch   19/20 Batch 1/3 Cost: 0.409050\n",
-      "Epoch   19/20 Batch 2/3 Cost: 0.321573\n",
-      "Epoch   19/20 Batch 3/3 Cost: 0.319538\n",
-      "Epoch   20/20 Batch 1/3 Cost: 0.351552\n",
-      "Epoch   20/20 Batch 2/3 Cost: 0.235971\n",
-      "Epoch   20/20 Batch 3/3 Cost: 0.486371\n"
+      "Epoch    0/20 Batch 1/3 Cost: 26948.574219\n",
+      "Epoch    0/20 Batch 2/3 Cost: 6044.408203\n",
+      "Epoch    0/20 Batch 3/3 Cost: 1751.581421\n",
+      "Epoch    1/20 Batch 1/3 Cost: 820.555908\n",
+      "Epoch    1/20 Batch 2/3 Cost: 228.013123\n",
+      "Epoch    1/20 Batch 3/3 Cost: 111.486160\n",
+      "Epoch    2/20 Batch 1/3 Cost: 17.937288\n",
+      "Epoch    2/20 Batch 2/3 Cost: 6.253775\n",
+      "Epoch    2/20 Batch 3/3 Cost: 12.035614\n",
+      "Epoch    3/20 Batch 1/3 Cost: 0.115994\n",
+      "Epoch    3/20 Batch 2/3 Cost: 2.782716\n",
+      "Epoch    3/20 Batch 3/3 Cost: 0.011664\n",
+      "Epoch    4/20 Batch 1/3 Cost: 0.131695\n",
+      "Epoch    4/20 Batch 2/3 Cost: 2.269470\n",
+      "Epoch    4/20 Batch 3/3 Cost: 1.244701\n",
+      "Epoch    5/20 Batch 1/3 Cost: 0.025187\n",
+      "Epoch    5/20 Batch 2/3 Cost: 0.133366\n",
+      "Epoch    5/20 Batch 3/3 Cost: 5.446771\n",
+      "Epoch    6/20 Batch 1/3 Cost: 1.759431\n",
+      "Epoch    6/20 Batch 2/3 Cost: 0.420898\n",
+      "Epoch    6/20 Batch 3/3 Cost: 1.362975\n",
+      "Epoch    7/20 Batch 1/3 Cost: 0.147138\n",
+      "Epoch    7/20 Batch 2/3 Cost: 2.678567\n",
+      "Epoch    7/20 Batch 3/3 Cost: 0.427087\n",
+      "Epoch    8/20 Batch 1/3 Cost: 2.386539\n",
+      "Epoch    8/20 Batch 2/3 Cost: 0.068774\n",
+      "Epoch    8/20 Batch 3/3 Cost: 0.770359\n",
+      "Epoch    9/20 Batch 1/3 Cost: 2.750409\n",
+      "Epoch    9/20 Batch 2/3 Cost: 0.446204\n",
+      "Epoch    9/20 Batch 3/3 Cost: 0.112107\n",
+      "Epoch   10/20 Batch 1/3 Cost: 0.021145\n",
+      "Epoch   10/20 Batch 2/3 Cost: 0.129643\n",
+      "Epoch   10/20 Batch 3/3 Cost: 5.465947\n",
+      "Epoch   11/20 Batch 1/3 Cost: 2.170571\n",
+      "Epoch   11/20 Batch 2/3 Cost: 0.660280\n",
+      "Epoch   11/20 Batch 3/3 Cost: 0.045342\n",
+      "Epoch   12/20 Batch 1/3 Cost: 0.521690\n",
+      "Epoch   12/20 Batch 2/3 Cost: 2.580491\n",
+      "Epoch   12/20 Batch 3/3 Cost: 0.053306\n",
+      "Epoch   13/20 Batch 1/3 Cost: 0.177558\n",
+      "Epoch   13/20 Batch 2/3 Cost: 0.229718\n",
+      "Epoch   13/20 Batch 3/3 Cost: 5.019607\n",
+      "Epoch   14/20 Batch 1/3 Cost: 2.190432\n",
+      "Epoch   14/20 Batch 2/3 Cost: 0.739953\n",
+      "Epoch   14/20 Batch 3/3 Cost: 0.058581\n",
+      "Epoch   15/20 Batch 1/3 Cost: 0.375989\n",
+      "Epoch   15/20 Batch 2/3 Cost: 2.420453\n",
+      "Epoch   15/20 Batch 3/3 Cost: 0.050189\n",
+      "Epoch   16/20 Batch 1/3 Cost: 0.173013\n",
+      "Epoch   16/20 Batch 2/3 Cost: 0.228697\n",
+      "Epoch   16/20 Batch 3/3 Cost: 5.011816\n",
+      "Epoch   17/20 Batch 1/3 Cost: 1.265554\n",
+      "Epoch   17/20 Batch 2/3 Cost: 1.277533\n",
+      "Epoch   17/20 Batch 3/3 Cost: 1.214819\n",
+      "Epoch   18/20 Batch 1/3 Cost: 0.114315\n",
+      "Epoch   18/20 Batch 2/3 Cost: 2.756674\n",
+      "Epoch   18/20 Batch 3/3 Cost: 0.012103\n",
+      "Epoch   19/20 Batch 1/3 Cost: 0.325798\n",
+      "Epoch   19/20 Batch 2/3 Cost: 0.049640\n",
+      "Epoch   19/20 Batch 3/3 Cost: 4.920820\n",
+      "Epoch   20/20 Batch 1/3 Cost: 0.876878\n",
+      "Epoch   20/20 Batch 2/3 Cost: 1.650268\n",
+      "Epoch   20/20 Batch 3/3 Cost: 1.923031\n"
      ]
     }
    ],
@@ -365,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 18,
    "id": "91202caf",
    "metadata": {},
    "outputs": [
@@ -373,7 +378,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "151.69960021972656\n"
+      "149.83740234375\n"
      ]
     }
    ],
