feat : VAE Implementation

--- a/yebin/softmax_regression/softmax_regression.ipynb
+++ b/yebin/softmax_regression/softmax_regression.ipynb
@@ -572,8 +572,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 330,
    "id": "2bc2bee7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch._C.Generator at 0x2ca084319d0>"
+      ]
+     },
+     "execution_count": 330,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.manual_seed(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 329,
+   "id": "67880ab7",
    "metadata": {},
    "outputs": [
     {
@@ -582,25 +603,7 @@
      "text": [
       "OrderedDict([('weight', tensor([[ 0.2576, -0.2207, -0.0969,  0.2347],\n",
       "        [-0.4707,  0.2999, -0.1029,  0.2544],\n",
-      "        [ 0.0695, -0.0612,  0.1387,  0.0247]])), ('bias', tensor([ 0.1826, -0.1949, -0.0365]))])\n"
-     ]
-    }
-   ],
-   "source": [
-    "torch.manual_seed(1)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "67880ab7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "        [ 0.0695, -0.0612,  0.1387,  0.0247]])), ('bias', tensor([ 0.1826, -0.1949, -0.0365]))])\n",
       "Epoch    0/1000 Cost : 1.616785\n",
       "Epoch  100/1000 Cost : 0.658891\n",
       "Epoch  200/1000 Cost : 0.573443\n",
@@ -618,6 +621,7 @@
    "source": [
     "model = nn.Linear(4,3)\n",
     "print(model.state_dict())\n",
+    "\n",
     "optimizer = optim.SGD(model.parameters(), lr = 0.1)\n",
     "\n",
     "nb_epochs = 1000\n",
@@ -644,17 +648,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": null,
    "id": "33b4081e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "class SoftmaxClassifierModel(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        self.linear = nn.Linear(4, 3)\n",
-    "        print(model.state_dict())\n",
+    "        print(self.linear.state_dict())\n",
     "\n",
     "    def forward(self, x):\n",
     "        return self.linear(x)"
@@ -662,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 332,
    "id": "e03a70bf",
    "metadata": {},
    "outputs": [
@@ -670,22 +673,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OrderedDict([('linear.weight', tensor([[ 0.2576, -0.2207, -0.0969,  0.2347],\n",
+      "OrderedDict([('weight', tensor([[ 0.2576, -0.2207, -0.0969,  0.2347],\n",
       "        [-0.4707,  0.2999, -0.1029,  0.2544],\n",
-      "        [ 0.0695, -0.0612,  0.1387,  0.0247]])), ('linear.bias', tensor([ 0.1826, -0.1949, -0.0365]))])\n"
+      "        [ 0.0695, -0.0612,  0.1387,  0.0247]])), ('bias', tensor([ 0.1826, -0.1949, -0.0365]))])\n"
      ]
     }
    ],
    "source": [
-    "torch.manual_seed(1)\n",
     "model = SoftmaxClassifierModel()\n",
-    "\n",
     "optimizer = optim.SGD(model.parameters(), lr = 0.1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 333,
    "id": "1d0ee0b7",
    "metadata": {},
    "outputs": [
