feat : DCGAN Implemented + other files created

--- a/yebin/Tutorials/VAE_Tutorial.ipynb
+++ b/yebin/Tutorials/VAE_Tutorial.ipynb
@@ -10,12 +10,20 @@
     "- Implementation of VAE from :\n",
     "    - https://arxiv.org/abs/1312.6114\n",
     "- Reference codes :\n",
-    "    - https://github.com/Jackson-Kang/Pytorch-VAE-tutorial"
+    "    - https://github.com/Jackson-Kang/Pytorch-VAE-tutorial\n",
+    "\n",
+    "## What do we need?\n",
+    "\n",
+    "- Dataset : MNIST\n",
+    "- Encoder \n",
+    "- Decoder\n",
+    "- Sampler with reparameterization trick\n",
+    "- Loss function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "fc3b35e3",
    "metadata": {},
    "outputs": [],
@@ -32,8 +40,6 @@
    "source": [
     "## Model Hyperparameters\n",
     "\n",
-    "### What do we need?\n",
-    "\n",
     "- Device : CPU / GPU?\n",
     "- Batch size\n",
     "- learning rate / Epoch\n",
@@ -45,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "b4e2bdc6",
    "metadata": {},
    "outputs": [],
@@ -89,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "67836d7b",
    "metadata": {},
    "outputs": [],
@@ -130,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "0d3f1daa",
    "metadata": {},
    "outputs": [],
@@ -143,8 +149,6 @@
     "        self.fc2 = nn.Linear(hidden_dim, hidden_dim)\n",
     "        self.fc_mean = nn.Linear(hidden_dim, latent_dim)\n",
     "        self.fc_var = nn.Linear(hidden_dim, latent_dim)\n",
-    "\n",
-    "        self.training = True\n",
     "\n",
     "    def forward(self, x):\n",
     "        out = self.fc1(x)\n",
@@ -347,8 +351,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8f7ab3aa",
+   "metadata": {},
+   "source": [
+    "## Training Process"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "33996461",
    "metadata": {},
    "outputs": [
@@ -390,8 +402,6 @@
     }
    ],
    "source": [
-    "## Training Process\n",
-    "\n",
     "model.train()\n",
     "\n",
     "for epoch in range(epochs):\n",
@@ -633,6 +643,37 @@
     "\n",
     "High loss, which means encoder $q_{\\phi}(\\mathbf z \\vert \\mathbf x)$ is still quite different from Gaussian.\\\n",
     "This seems to be the main reason for low-quality generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "01c5e6fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cwd: c:\\Users\\evana\\OneDrive\\Desktop\\projects\\deep-learning-practice\\yebin\\Tutorials\n",
+      "dataset_path raw: ~/datasets\n",
+      "dataset_path expanded: C:\\Users\\evana/datasets\n",
+      "train_dataset.root: C:\\Users\\evana/datasets\n",
+      "exists root?: True\n",
+      "contents: ['MNIST']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "print(\"cwd:\", os.getcwd())\n",
+    "print(\"dataset_path raw:\", dataset_path)\n",
+    "print(\"dataset_path expanded:\", os.path.expanduser(dataset_path))\n",
+    "\n",
+    "print(\"train_dataset.root:\", train_dataset.root)\n",
+    "print(\"exists root?:\", os.path.exists(train_dataset.root))\n",
+    "print(\"contents:\", os.listdir(train_dataset.root))"
    ]
   }
  ],
